src/kubernetes/bigquery-writer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bigquery-writer
    kafka-role: consumer
  name: bigquery-writer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bigquery-writer
      kafka-role: consumer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bigquery-writer
        kafka-role: consumer
    spec:
      securityContext:
        runAsUser: 1010
        runAsNonRoot: true
      automountServiceAccountToken: false
      containers:
        - image: southamerica-east1-docker.pkg.dev/midia-in-da-house/gke-cr/bigquery-writer:latest
          imagePullPolicy: Always
          name: bigquery-writer
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            failureThreshold: 5
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            failureThreshold: 2
            periodSeconds: 3
          volumeMounts:
            - name: gcp-sa-key
              mountPath: /secrets/key.json
              subPath: key.json
              readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: gcp-sa-key
          secret:
            secretName: gcp-sa-key
