src/kubernetes/bigquery-writer/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bigquery-writer
    kafka-role: consumer
    release: prometheus
  name: bigquery-writer
spec:
  ports:
  - port: 80
    name: metrics
    protocol: TCP
    targetPort: 8080
  selector:
    app: bigquery-writer
    kafka-role: consumer
status:
  loadBalancer: {}
